--- a/app/src/main/res/layout/activity_international_transfer.xml
+++ b/app/src/main/res/layout/activity_international_transfer.xml
@@ -59,7 +59,7 @@
 
         <FrameLayout
             android:id="@+id/frameAsalTf"
-            android:layout_width="40dp"
+            android:layout_width="50dp"
             android:layout_height="40dp"
             app:layout_constraintStart_toStartOf="@+id/constrainPilihNegara"
             app:layout_constraintTop_toTopOf="@+id/constrainPilihNegara"
@@ -67,9 +67,10 @@
 
             <ImageSwitcher
                 android:id="@+id/ivAsalTf"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_marginStart="3dp"/>
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="5dp"
+                android:layout_marginStart="5dp"/>
 
         </FrameLayout>
 
@@ -115,29 +116,31 @@
 
         <FrameLayout
             android:id="@+id/frameTujuanTf"
-            android:layout_width="40dp"
+            android:layout_width="50dp"
             android:layout_height="40dp"
             app:layout_constraintStart_toStartOf="@+id/constrainTujuanNegara"
             app:layout_constraintTop_toTopOf="@+id/constrainTujuanNegara"
             app:layout_constraintBottom_toBottomOf="@+id/constrainTujuanNegara">
 
-            <ImageView
+            <ImageSwitcher
                 android:id="@+id/ivTujuanTf"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_marginStart="3dp"/>
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="5dp"
+                android:layout_marginStart="5dp"/>
 
         </FrameLayout>
 
-        <ImageView
-            android:id="@+id/ivDropTujuan"
-            android:layout_width="30dp"
-            android:layout_height="30dp"
-            android:layout_marginEnd="10dp"
-            android:src="@drawable/ic_baseline_keyboard_arrow_down_24"
+        <Spinner
+            android:id="@+id/spinner_tujuan"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:spinnerMode="dialog"
+            android:backgroundTint="#000000"
             app:layout_constraintTop_toTopOf="@id/constrainTujuanNegara"
             app:layout_constraintStart_toEndOf="@id/frameTujuanTf"
             app:layout_constraintBottom_toBottomOf="@id/constrainTujuanNegara"/>
+
 
         <EditText
             android:id="@+id/etDropTujuan"
@@ -151,7 +154,7 @@
             android:background="@drawable/rounded_bg_sechond"
             android:src="@drawable/ic_baseline_keyboard_arrow_down_24"
             app:layout_constraintTop_toTopOf="@id/constrainTujuanNegara"
-            app:layout_constraintStart_toEndOf="@id/ivDropTujuan"
+            app:layout_constraintStart_toEndOf="@id/spinner_tujuan"
             app:layout_constraintBottom_toBottomOf="@id/constrainTujuanNegara"/>
 
     </androidx.constraintlayout.widget.ConstraintLayout>
