--- a/app/src/main/res/layout/activity_bank_international.xml
+++ b/app/src/main/res/layout/activity_bank_international.xml
@@ -55,6 +55,7 @@
                 android:layout_width="30dp"
                 android:layout_height="30dp"
                 android:src="@drawable/ic_ind"
+                android:layout_marginEnd="10dp"
                 android:layout_marginVertical="15dp"
                 app:layout_constraintTop_toTopOf="@+id/constTotalInter"
                 app:layout_constraintEnd_toStartOf="@id/tvCodeCountry"/>
@@ -64,7 +65,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="IDR ke IDR"
-                android:layout_marginStart="5dp"
+                android:layout_marginStart="30dp"
                 android:textSize="12sp"
                 android:textColor="@color/warna_auth_font"
                 android:fontFamily="@font/dm_sans_bold"
