--- a/app/src/main/res/layout/activity_bank_lokal.xml
+++ b/app/src/main/res/layout/activity_bank_lokal.xml
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".features.metodetransfer.internasional.BankInternationalActivity">
+    android:background="@color/warna_background"
+    tools:context=".features.metodetransfer.lokal.BankLokalActivity">
 
     <ImageView
         android:id="@+id/ivBack"
@@ -288,68 +288,6 @@
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
-    <TextView
-        android:id="@+id/tvSwift"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Kode Swift"
-        android:fontFamily="@font/dm_sans_medium"
-        android:textSize="16sp"
-        android:textColor="@color/warna_auth_font"
-        android:layout_marginVertical="30dp"
-        android:layout_marginStart="24dp"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/constrainPilihRekening"/>
-
-    <TextView
-        android:id="@+id/tvStarSwift"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="*"
-        android:textColor="@color/warning_font"
-        android:fontFamily="@font/dm_sans_medium"
-        android:textSize="16sp"
-        android:layout_marginVertical="30dp"
-        android:layout_marginStart="5dp"
-        app:layout_constraintStart_toEndOf="@+id/tvRekening"
-        app:layout_constraintTop_toBottomOf="@+id/constrainPilihRekening"/>
-
-    <androidx.constraintlayout.widget.ConstraintLayout
-        android:id="@+id/constrainPilihSwift"
-        android:layout_width="match_parent"
-        android:layout_height="50dp"
-        android:layout_marginStart="24dp"
-        android:layout_marginEnd="24dp"
-        android:background="@drawable/transparent_bg_button"
-        app:layout_constraintTop_toBottomOf="@+id/tvSwift"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent">
-
-        <TextView
-            android:id="@+id/etKodeSwift"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Nama Penerima"
-            android:fontFamily="@font/dm_sans_medium"
-            android:textSize="12sp"
-            android:textColor="@color/warna_auth_font"
-            android:layout_marginVertical="5dp"
-            app:layout_constraintTop_toTopOf="@id/constrainPilihSwift"
-            app:layout_constraintStart_toStartOf="@id/constrainPilihSwift"
-            app:layout_constraintBottom_toBottomOf="@id/constrainPilihSwift"
-            android:layout_marginStart="10dp"/>
-
-        <ImageView
-            android:layout_width="30dp"
-            android:layout_height="30dp"
-            android:layout_marginEnd="10dp"
-            android:src="@drawable/ic_baseline_keyboard_arrow_down_24"
-            app:layout_constraintTop_toTopOf="@id/constrainPilihSwift"
-            app:layout_constraintEnd_toEndOf="@id/constrainPilihSwift"
-            app:layout_constraintBottom_toBottomOf="@id/constrainPilihSwift"/>
-
-    </androidx.constraintlayout.widget.ConstraintLayout>
-
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/constraintBtnkirim"
         android:layout_width="match_parent"
@@ -388,17 +326,5 @@
             app:layout_constraintBottom_toBottomOf="@+id/constraintBtnkirim"/>
 
     </androidx.constraintlayout.widget.ConstraintLayout>
-
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Silakan cek kode swift disini"
-        android:textColor="@color/warna_primary_font"
-        android:textSize="14sp"
-        android:layout_marginVertical="5dp"
-        android:fontFamily="@font/dm_sans_medium"
-        android:layout_marginStart="24dp"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/constrainPilihSwift"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
