--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -161,6 +161,7 @@
         android:hint="Kata Sandi"
         android:paddingStart="10dp"
         android:inputType="textPassword"
+        app:endIconMode="password_toggle"
         android:digits="abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ0123456789@$#"
         android:layout_marginEnd="24dp"
         android:layout_marginVertical="5dp"
@@ -210,7 +211,6 @@
         app:layout_constraintTop_toBottomOf="@+id/tvLupaPassword"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
-
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
