--- a/app/src/main/res/layout/pop_up_aktivasi_akun.xml
+++ b/app/src/main/res/layout/pop_up_aktivasi_akun.xml
@@ -1,16 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:paddingBottom="30dp"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:background="@color/warna_background">
 
-    <ImageView
+    <com.airbnb.lottie.LottieAnimationView
         android:id="@+id/ivCross"
-        android:layout_width="80dp"
-        android:layout_height="80dp"
-        android:src="@drawable/crosss_icon"
+        android:layout_width="250dp"
+        android:layout_height="250dp"
+        app:lottie_autoPlay="true"
+        app:lottie_loop="true"
+        app:lottie_rawRes="@raw/failedauth"
         android:layout_marginTop="30dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
@@ -20,12 +23,13 @@
     <TextView
         android:id="@+id/tvKataSandi"
         android:layout_width="300dp"
-        android:layout_height="43dp"
+        android:layout_height="wrap_content"
         android:text="Email or password invalid"
         android:textAlignment="center"
-        android:textSize="15sp"
+        android:textSize="25sp"
+        android:fontFamily="@font/dm_sans_bold"
         android:textColor="@color/warning_font"
-        android:layout_marginTop="35dp"
+        android:layout_marginTop="10dp"
         android:layout_marginHorizontal="40dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -43,4 +47,5 @@
         android:layout_marginHorizontal="24dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/tvKataSandi"/>
+
 </androidx.constraintlayout.widget.ConstraintLayout>
