--- a/app/src/main/res/layout/popup_aktivasi_akun_berhasil.xml
+++ b/app/src/main/res/layout/popup_aktivasi_akun_berhasil.xml
@@ -1,31 +1,32 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:paddingBottom="30dp"
+    android:layout_height="400dp"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:background="@drawable/round_corner">
 
-    <ImageView
+    <com.airbnb.lottie.LottieAnimationView
         android:id="@+id/ivCross"
-        android:layout_width="80dp"
-        android:layout_height="80dp"
-        android:src="@drawable/ic_succsestf"
-        android:layout_marginTop="30dp"
+        android:layout_width="250dp"
+        android:layout_height="250dp"
+        app:lottie_autoPlay="true"
+        app:lottie_loop="true"
+        app:lottie_rawRes="@raw/success"
+        android:layout_marginTop="10dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintTop_toTopOf="parent"/>
 
     <TextView
         android:id="@+id/tvKataSandi"
         android:layout_width="300dp"
-        android:layout_height="43dp"
+        android:layout_height="wrap_content"
         android:text="Berhasil login"
         android:textAlignment="center"
-        android:textSize="15sp"
-        android:textColor="@color/black"
-        android:layout_marginTop="40dp"
+        android:textSize="25sp"
+        android:paddingBottom="60dp"
+        android:fontFamily="@font/dm_sans_bold"
+        android:textColor="@color/warna_auth_font"
         android:layout_marginHorizontal="40dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
